basic elements added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Cool Landing Page</title>
 </head>
 <body>
     
+    <div class="header">
+        <p class="logo">Header Logo</p>
+        <ul class="toplinks">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+
+    <div class="intro">
+
+        <h1>
+            This website is awesome
+        </h1>
+
+        <p>
+            This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+        </p>
+
+        <button>Sign up</button>
+
+        <img src="https://picsum.photos/536/354" alt="a random placeholder image">
+
+    </div>
+
+    <div class="imagearea">
+
+        <h2>Some random information.</h2>
+
+        <div class="fourimages">
+
+            <img src="https://picsum.photos/536/354"
+            alt="img one" height="100px" width="100px">
+
+            <img src="https://picsum.photos/536/354"
+            alt="img two" height="100px" width="100px">
+
+            <img src="https://picsum.photos/536/354"
+            alt="img three" height="100px" width="100px">
+
+            <img src="https://picsum.photos/536/354"
+            alt="img four" height="100px" width="100px">
+
+            <p>info about image one</p>
+
+            <p>info about image two</p>
+
+            <p>info about image three</p>
+
+            <p>info about image four</p>
+
+        </div>
+
+    </div>
+
+    <div class="quote">
+
+        <h3>inspiring quote moment</h3>
+            
+        <h4>- a quote guy</h4>
+
+    </div>
+
+    <div class="callaction">
+
+        <p class="callone">this is a call to action section</p>
+
+        <p class="calltwo">call subtext</p>
+
+        <button>Sign up</button>
+
+    </div>
+
+</div>
+
 </body>
 </html>
