progress on layout

--- a/index.html
+++ b/index.html
@@ -39,17 +39,21 @@
 
         <div class="fourimages">
 
-            <img src="https://picsum.photos/536/354"
+            <img class="oneoffour" src="https://picsum.photos/536/354"
             alt="img one" height="100px" width="100px">
 
-            <img src="https://picsum.photos/536/354"
+            <img class="oneoffour" src="https://picsum.photos/536/354"
             alt="img two" height="100px" width="100px">
 
-            <img src="https://picsum.photos/536/354"
+            <img class="oneoffour" src="https://picsum.photos/536/354"
             alt="img three" height="100px" width="100px">
 
-            <img src="https://picsum.photos/536/354"
+            <img class="oneoffour" src="https://picsum.photos/536/354"
             alt="img four" height="100px" width="100px">
+        
+        </div>
+
+        <div class="fourtext">
 
             <p>info about image one</p>
 
